Refactored the endpoints based on role